--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
+    "datatables.net-buttons": "^3.2.3",
+    "datatables.net-dt": "^2.3.1",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.20",
     "preline": "^3.0.1",
     "tailwindcss": "^4.1.4",
     "vanilla-calendar-pro": "^3.0.4"
